--- a/practices/big-practice/package.json
+++ b/practices/big-practice/package.json
@@ -16,7 +16,8 @@
     "ag-grid-react": "^32.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
