--- a/practices/big-practice/package.json
+++ b/practices/big-practice/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ag-grid-community": "^32.2.2",
     "ag-grid-react": "^32.2.2",
+    "clsx": "^2.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
