--- a/practices/big-practice/package.json
+++ b/practices/big-practice/package.json
@@ -18,7 +18,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
