--- a/practices/big-practice/package.json
+++ b/practices/big-practice/package.json
@@ -12,6 +12,8 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "ag-charts-community": "^10.3.3",
+    "ag-charts-react": "^10.3.3",
     "ag-grid-community": "^32.2.2",
     "ag-grid-react": "^32.2.2",
     "clsx": "^2.1.1",
