Update unit test

--- a/practices/big-practice/package.json
+++ b/practices/big-practice/package.json
@@ -28,6 +28,9 @@
     "uuid": "^11.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@chromatic-com/storybook": "3.2.2",
     "@eslint/js": "^9.11.1",
     "@storybook/addon-essentials": "8.4.4",
@@ -45,6 +48,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
