--- a/practices/big-practice/package.json
+++ b/practices/big-practice/package.json
@@ -20,7 +20,6 @@
     "ag-grid-community": "^32.2.2",
     "ag-grid-react": "^32.2.2",
     "clsx": "^2.1.1",
-    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
@@ -28,9 +27,6 @@
     "uuid": "^11.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
     "@chromatic-com/storybook": "3.2.2",
     "@eslint/js": "^9.11.1",
     "@storybook/addon-essentials": "8.4.4",
@@ -44,11 +40,11 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
-    "babel-jest": "^29.7.0",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
@@ -57,7 +53,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-transform-stub": "^2.0.0",
     "postcss": "^8.4.47",
     "storybook": "8.4.4",
     "tailwindcss": "^3.4.14",
@@ -65,8 +60,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8",
-    "whatwg-fetch": "^3.6.20"
+    "vite": "^5.4.8"
   },
   "eslintConfig": {
     "extends": [
