--- a/practices/big-practice/package.json
+++ b/practices/big-practice/package.json
@@ -44,6 +44,7 @@
     "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/rollup-plugin-visualizer": "^4.2.4",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
@@ -56,13 +57,16 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
+    "rollup-plugin-visualizer": "^5.14.0",
     "storybook": "8.4.4",
     "tailwindcss": "^3.4.14",
+    "terser": "^5.37.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-compression": "^0.5.1"
   },
   "eslintConfig": {
     "extends": [
