--- a/practices/big-practice/package.json
+++ b/practices/big-practice/package.json
@@ -15,7 +15,6 @@
     "build:css": "vite build"
   },
   "dependencies": {
-    "@storybook/addon-actions": "^8.4.4",
     "ag-charts-community": "^10.3.3",
     "ag-charts-react": "^10.3.3",
     "ag-grid-community": "^32.2.2",
@@ -28,7 +27,6 @@
     "uuid": "^11.0.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "3.2.2",
     "@eslint/js": "^9.11.1",
     "@storybook/addon-essentials": "8.4.4",
     "@storybook/addon-interactions": "8.4.4",
@@ -39,12 +37,10 @@
     "@storybook/test": "8.4.4",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "@types/rollup-plugin-visualizer": "^4.2.4",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
@@ -57,7 +53,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
-    "rollup-plugin-visualizer": "^5.14.0",
     "storybook": "8.4.4",
     "tailwindcss": "^3.4.14",
     "terser": "^5.37.0",
@@ -65,8 +60,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8",
-    "vite-plugin-compression": "^0.5.1"
+    "vite": "^5.4.8"
   },
   "eslintConfig": {
     "extends": [
